# exchange-calendar-service

./: .dockerignore  .pre-commit-config.yaml  README.md  changes.yaml  pyproject.toml
.devcontainer/: Dockerfile
.github/workflows/: ci.yml  maintenance.yml  pr-closed.yml  publish-rc.yml  publish.yml
customize/: __init__.py  xtae.py
docker/: develop.dockerfile  develop_legacy_arch.dockerfile.bak  release.dockerfile
docs/: basic_usage.md
exchange_calendar_service/main/: __main__.py  app.py  exchanges2.py  settings.py  util.py
exchange_calendar_service/main/api/v1/: endpoints.py
exchange_calendar_service/main/common/: cache.py  constants.py  context.py  util.py
tests/: conftest.py  test_util.py
tests/main/api/v1/: special_days.py  test_endpoints.py
